--- a/.gitignore
+++ b/.gitignore
@@ -1,9 +1,13 @@
 # Local .terraform directories
 **/.terraform/*
+**/reference/*
 
 # .tfstate files
 *.tfstate
 *.tfstate.*
+
+# .lock.hcl files
+*.lock.hcl
 
 # Crash log files
 crash.log
@@ -15,6 +19,7 @@ crash.*.log
 # to change depending on the environment.
 *.tfvars
 *.tfvars.json
+backend.json
 
 # Ignore override files as they are usually used to override resources locally and so
 # are not checked in
