--- a/terraform.tfvars.example
+++ b/terraform.tfvars.example
@@ -16,3 +16,5 @@ prefix = "aks"
 admin_password= "xxxyyyzzz"
 admin_username= "vmadmin"
 vm_size= "Standard_D2s_v4"
+userpool_vm_size= "Standard_D2s_v4"
+usergpupool_vm_size= "Standard_NC24ads_A100_v4"
